tests/positive/runtime_mem.ax
module runtime_mem;

import runtime.mem;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    if !is_power_of_two(cast(usize, 8)) {
        return 1;
    }
    if is_power_of_two(cast(usize, 10)) {
        return 2;
    }
    var arena: Arena = arena_create(cast(usize, 64));
    if arena.base == null {
        return 3;
    }
    let first: *mut u8 = arena_alloc(&arena, cast(usize, 3), cast(usize, 8));
    let second: *mut u8 = arena_alloc(&arena, cast(usize, 4), cast(usize, 16));
    if first == null || second == null {
        arena_destroy(&arena);
        return 4;
    }
    if ptr_addr(first) % cast(usize, 8) != cast(usize, 0) {
        arena_destroy(&arena);
        return 5;
    }
    if ptr_addr(second) % cast(usize, 16) != cast(usize, 0) {
        arena_destroy(&arena);
        return 6;
    }
    arena_destroy(&arena);
    return 0;
}
