tests/negative/module_name_mismatch.ax
module module_name_mismatch;

import bad.name;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    return nope();
}
